test/zinc_source/compile_errors/tuples/03_destructure_arity_mismatch.zn
// expected-error: tuple destructuring arity mismatch

fn main() {
    a, b = (1, 2, 3)
}
